--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,15 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
- 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+ 
   
     <title>To-DO React</title>
   </head>
-  <body>
+  <body style="background-color: #202020">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     
   </body>
 </html>
